--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -19,7 +19,7 @@
 }
 
 .subtitle {
-    padding-top: 15px;
+    padding: 15px 0;
     text-align: center;
     font-size: 24px;
     letter-spacing: 0.01em;
