fix: add grid system

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -21,5 +21,25 @@
         color: #fff;
         background-color: #007bff;
         border-color: #007bff;
+
+        &:hover {
+            color: #fff;
+            background-color: #0069d9;
+            border-color: #0062cc;
+        }
+    }
+
+}
+
+.outline {
+    &--primary {
+        color: #007bff;
+        border-color: #007bff;
+
+        &:hover {
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+        }
     }
 }
