--- a/src/styles/Globalstyles.scss
+++ b/src/styles/Globalstyles.scss
@@ -22,7 +22,7 @@ time, mark, audio, video {
 }
 
 html {
-    font-family: 'Open sans';
+	font-family: 'Open sans';
     font-weight: 400;
 }
 
@@ -30,6 +30,22 @@ h1 {
     font-weight: 700;
 }
 
+h2 {
+	font-size: 1.75rem;
+}
+
 p {
     font-weight: 300;
 }
+
+.p-5 {
+	padding: 3rem!important;
+}
+
+.highlight {
+	padding: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+@import './Grid.scss';
