--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -12,7 +12,7 @@
 }
 
 .subtitle {
-    padding: 15px 0;
+    padding: 15px;
     text-align: center;
     font-size: 24px;
     letter-spacing: 0.01em;
