--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,13 +1,3 @@
-
-.title {
-    color: #61dafb;
-    font-size: 45px;
-}
-
-.subtitle {
-    padding-top: 15px;
-    text-align: center;
-    font-size: 24px;
-    letter-spacing: 0.01em;
-    font-weight: 200;
+.main-container {
+    margin: 0!important;
 }
