--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,20 +1,20 @@
 .main-header {
-    background-color: #222222;
-    text-align: center;
-    color: #ffffff;
-    padding: 20px 0px;
-    width: 100%;
+	background-color: #222;
+	color: #fff;
+	padding: 20px 0;
+	text-align: center;
+	width: 100%;
 }
 
 .title {
-    color: #61dafb;
-    font-size: 45px;
+	color: #61dafb;
+	font-size: 45px;
 }
 
 .subtitle {
-    padding: 15px;
-    text-align: center;
-    font-size: 24px;
-    letter-spacing: 0.01em;
-    font-weight: 200;
+	font-size: 24px;
+	font-weight: 200;
+	letter-spacing: 0.01em;
+	padding: 15px;
+	text-align: center;
 }
