--- a/src/styles/Globalstyles.scss
+++ b/src/styles/Globalstyles.scss
@@ -1,33 +1,103 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+ 
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+ 
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+	border: 0;
+	font: inherit;
+	font-size: 100%;
 	margin: 0;
 	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
 	vertical-align: baseline;
 }
 
 html {
 	font-family: 'Open sans';
-    font-weight: 400;
+	font-weight: 400;
 }
 
 h1 {
-    font-weight: 700;
+	font-weight: 700;
 }
 
 h2 {
@@ -35,7 +105,7 @@ h2 {
 }
 
 p {
-    font-weight: 300;
+	font-weight: 300;
 }
 
 .mt-5 {
@@ -43,7 +113,7 @@ p {
 }
 
 .col-md-4 {
-	max-width: 33.333333%!important;
+	max-width: 33.333333% !important;
 }
 
 .p-1 {
@@ -57,9 +127,9 @@ p {
 }
 
 .highlight {
+	margin-bottom: 1rem;
+	margin-top: 1rem;
 	padding: 1rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 
 @import './Grid.scss';
